<resources>
    <string name="app_name">MediumRareEvil</string>
    <string name="action_settings">Settings</string>
    <string name="ok">OK</string>
    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="down">Down</string>
    <string name="up">Up</string>
    <string name="health">H</string>
    <string name="damage">D</string>
    <string name="movement">M</string>
    <string name="x_hint">X</string>
    <string name="x_mod_hint">X mod</string>
    <string name="y_hint">Y</string>
    <string name="y_mod_hint">Y mod</string>
    <string name="x_origin_hint">X ori</string>
    <string name="y_origin_hint">Y ori</string>
</resources>
