<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.arbitraryname.summer_project.MainActivity"
    tools:showIn="@layout/activity_main">

    <Button
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/ok"
        android:textSize="15sp"
        android:id="@+id/selectBtn"
        android:onClick="select"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="5dp" />

    <Button
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/left"
        android:textSize="15sp"
        android:id="@+id/leftBtn"
        android:onClick="moveCursorLeft"
        android:layout_alignBottom="@+id/selectBtn"
        android:layout_alignTop="@+id/selectBtn"
        android:layout_toRightOf="@+id/upBtn" />

    <Button
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/right"
        android:textSize="15sp"
        android:id="@+id/rightBtn"
        android:onClick="moveCursorRight"
        android:layout_alignBottom="@+id/selectBtn"
        android:layout_alignTop="@+id/selectBtn"
        android:layout_toRightOf="@+id/leftBtn" />

    <Button
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/down"
        android:textSize="15sp"
        android:id="@+id/downBtn"
        android:onClick="moveCursorDown"
        android:layout_alignTop="@+id/selectBtn"
        android:layout_toRightOf="@+id/selectBtn"
        android:layout_alignBottom="@+id/selectBtn" />
    <Button
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/up"
        android:textSize="15sp"
        android:id="@+id/upBtn"
        android:layout_alignWithParentIfMissing="false"
        android:onClick="moveCursorUp"
        android:layout_alignTop="@+id/selectBtn"
        android:layout_alignBottom="@+id/selectBtn"
        android:layout_toRightOf="@+id/downBtn" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="115dp"
        android:id="@+id/imageView2"
        android:background="#5e5e5e"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/selectBtn" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/health"
        android:id="@+id/textView"
        android:textColor="#ffffff"
        android:layout_alignBottom="@+id/rightBtn"
        android:layout_toRightOf="@+id/rightBtn"
        android:layout_toEndOf="@+id/rightBtn"
        android:layout_marginLeft="100dp"
        android:layout_marginStart="100dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/damage"
        android:id="@+id/textView2"
        android:textColor="#ffffff"
        android:layout_marginLeft="55dp"
        android:layout_marginStart="55dp"
        android:layout_alignTop="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/movement"
        android:id="@+id/textView3"
        android:textColor="#ffffff"
        android:layout_marginLeft="20dp"
        android:layout_marginStart="20dp"
        android:layout_alignTop="@+id/textView"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView" />

    <Button
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="Quit"
        android:id="@+id/QuitButton"
        android:textSize="10dp" />

   <com.example.angelofmercy.mediumrareevil.MainGamePanel
       android:id="@+id/mainPanel"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       android:layout_alignParentRight="true"
       android:layout_alignParentEnd="true"
       android:layout_above="@+id/selectBtn" />


</RelativeLayout>
